--- a/backend/package.json
+++ b/backend/package.json
@@ -1,29 +1,37 @@
 {
-  "name": "Quizium",
-  "version": "1.0.0",
-  "main": "server.js",
-  "type": "module",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "dev": "nodemon server.js"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
-  "dependencies": {
-    "bcrypt": "^5.1.1",
-    "cookie-parser": "^1.4.6",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "express-async-errors": "^3.1.1",
-    "gridfs-stream": "^1.1.1",
-    "jsonwebtoken": "^9.0.2",
-    "mongodb": "^4.6.0",
-    "mongoose": "^8.4.1",
-    "morgan": "^1.10.0",
-    "multer-gridfs-storage": "^5.0.2"
-  }
+    "name": "Quizium",
+    "version": "1.0.0",
+    "main": "server.js",
+    "type": "module",
+    "scripts": {
+        "test": "jest auth.test.js user.test.js --watch",
+        "start": "node server.js",
+        "dev": "nodemon server.js"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "description": "",
+    "dependencies": {
+        "bcrypt": "^5.1.1",
+        "cookie-parser": "^1.4.6",
+        "cors": "^2.8.5",
+        "dotenv": "^16.4.5",
+        "express": "^4.19.2",
+        "express-async-errors": "^3.1.1",
+        "gridfs-stream": "^1.1.1",
+        "jest": "^29.7.0",
+        "jsonwebtoken": "^9.0.2",
+        "mongodb": "^4.6.0",
+        "mongoose": "^8.4.1",
+        "morgan": "^1.10.0",
+        "multer-gridfs-storage": "^5.0.2",
+        "supertest": "^7.0.0"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.24.7",
+        "@babel/preset-env": "^7.24.7",
+        "@jest/globals": "^29.7.0",
+        "babel-jest": "^29.7.0"
+    }
 }
