quiz setting panel created,with quiz info or setting update route

--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
     "main": "server.js",
     "type": "module",
     "scripts": {
-        "test": "jest auth.test.js user.test.js --watch",
+        "test": "jest --watch",
         "start": "node server.js",
         "dev": "nodemon server.js"
     },
