--- a/backend/package.json
+++ b/backend/package.json
@@ -26,7 +26,8 @@
         "mongoose": "^8.4.1",
         "morgan": "^1.10.0",
         "multer-gridfs-storage": "^5.0.2",
-        "supertest": "^7.0.0"
+        "supertest": "^7.0.0",
+        "uuid": "^10.0.0"
     },
     "devDependencies": {
         "@babel/core": "^7.24.7",
