--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,8 @@
     "react-hot-toast": "^2.4.1",
     "react-query": "^3.39.3",
     "react-router": "^6.24.1",
-    "react-router-dom": "^6.24.1"
+    "react-router-dom": "^6.24.1",
+    "react-virtualized": "^9.22.5"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
