--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
         "mongoose": "^8.4.1",
         "morgan": "^1.10.0",
         "multer-gridfs-storage": "^5.0.2",
+        "socket.io": "^4.7.5",
         "supertest": "^7.0.0",
         "uuid": "^10.0.0"
     },
