--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,36 +1,41 @@
 {
-  "name": "frontend",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "start": "npx tailwindcss -i ./src/input.css -o ./src/css/output.css --watch"
-  },
-  "dependencies": {
-    "axios": "^1.7.2",
-    "daisyui": "^4.12.10",
-    "dotenv": "^16.4.5",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-hot-toast": "^2.4.1",
-    "react-query": "^3.39.3",
-    "react-router": "^6.24.1",
-    "react-router-dom": "^6.24.1",
-    "react-virtualized": "^9.22.5",
-    "socket.io-client": "^4.7.5"
-  },
-  "devDependencies": {
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react": "^4.3.1",
-    "eslint": "^8.57.0",
-    "eslint-plugin-react": "^7.34.2",
-    "eslint-plugin-react-hooks": "^4.6.2",
-    "eslint-plugin-react-refresh": "^0.4.7",
-    "vite": "^5.3.1"
-  }
+    "name": "frontend",
+    "private": true,
+    "version": "0.0.0",
+    "type": "module",
+    "scripts": {
+        "dev": "vite",
+        "build": "vite build",
+        "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+        "preview": "vite preview",
+        "start": "npx tailwindcss -i ./src/input.css -o ./src/css/output.css --watch"
+    },
+    "dependencies": {
+        "@dicebear/collection": "^9.2.1",
+        "@dicebear/core": "^9.2.1",
+        "axios": "^1.7.2",
+        "daisyui": "^4.12.10",
+        "dotenv": "^16.4.5",
+        "esbuild-plugin-react-virtualized": "^1.0.4",
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1",
+        "react-hot-toast": "^2.4.1",
+        "react-query": "^3.39.3",
+        "react-router": "^6.24.1",
+        "react-router-dom": "^6.24.1",
+        "react-virtualized": "^9.22.5",
+        "react-virtualized-auto-sizer": "^1.0.24",
+        "react-window": "^1.8.10",
+        "socket.io-client": "^4.7.5"
+    },
+    "devDependencies": {
+        "@types/react": "^18.3.3",
+        "@types/react-dom": "^18.3.0",
+        "@vitejs/plugin-react": "^4.3.1",
+        "eslint": "^8.57.0",
+        "eslint-plugin-react": "^7.34.2",
+        "eslint-plugin-react-hooks": "^4.6.2",
+        "eslint-plugin-react-refresh": "^0.4.7",
+        "vite": "^5.3.1"
+    }
 }
