--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
         "dotenv": "^16.4.5",
         "express": "^4.19.2",
         "express-async-errors": "^3.1.1",
+        "google-auth-library": "^9.14.1",
         "gridfs-stream": "^1.1.1",
         "jest": "^29.7.0",
         "jsonwebtoken": "^9.0.2",
@@ -26,6 +27,7 @@
         "mongoose": "^8.4.1",
         "morgan": "^1.10.0",
         "multer-gridfs-storage": "^5.0.2",
+        "nodemailer": "^6.9.15",
         "socket.io": "^4.7.5",
         "supertest": "^7.0.0",
         "uuid": "^10.0.0"
