--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,19 +13,16 @@
     "dependencies": {
         "@dicebear/collection": "^9.2.1",
         "@dicebear/core": "^9.2.1",
+        "@react-oauth/google": "^0.12.1",
         "axios": "^1.7.2",
         "daisyui": "^4.12.10",
         "dotenv": "^16.4.5",
-        "esbuild-plugin-react-virtualized": "^1.0.4",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-hot-toast": "^2.4.1",
         "react-query": "^3.39.3",
         "react-router": "^6.24.1",
         "react-router-dom": "^6.24.1",
-        "react-virtualized": "^9.22.5",
-        "react-virtualized-auto-sizer": "^1.0.24",
-        "react-window": "^1.8.10",
         "socket.io-client": "^4.7.5"
     },
     "devDependencies": {
