--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "dev:tw": "cd frontend && npm start",
         "render-postbuild": "npm install --prefix frontend --production=false && cd frontend && npm run build",
         "install": "npm install --prefix backend && npm install --prefix frontend",
-        "build": "npm run build --prefix frontend",
+        "build": "cd frontend && npm install && npm run build",
         "start": "npm run start --prefix backend"
     },
     "keywords": [],
