--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,7 +22,8 @@
         "react-query": "^3.39.3",
         "react-router": "^6.24.1",
         "react-router-dom": "^6.24.1",
-        "socket.io-client": "^4.7.5"
+        "socket.io-client": "^4.7.5",
+        "vite": "^5.3.1"
     },
     "devDependencies": {
         "@types/react": "^18.3.3",
