--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
     "name": "Quizium",
     "version": "1.0.0",
-    "main": "test.js",
+    "private": true,
     "scripts": {
         "dev:fe": "cd frontend && npm run dev -- --host",
         "dev:be": "cd backend && npm run dev",
-        "dev:tw": "cd frontend && npm start"
+        "dev:tw": "cd frontend && npm start",
+        "render-postbuild": "npm install --prefix frontend --production=false && cd frontend && npm run build",
+        "install": "npm install --prefix backend && npm install --prefix frontend",
+        "build": "cd frontend && npm install && npm run build",
+        "start": "npm run start --prefix backend"
     },
     "keywords": [],
     "author": "",
