--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
         "express-async-errors": "^3.1.1",
         "google-auth-library": "^9.14.1",
         "gridfs-stream": "^1.1.1",
+        "helmet": "^7.1.0",
         "jest": "^29.7.0",
         "jsonwebtoken": "^9.0.2",
         "mongodb": "^4.6.0",
